--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,10 @@
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.READ_CALL_LOG" />
     <uses-permission android:name="android.permission.WRITE_CALL_LOG" />
-
+    <!-- 手机杀毒部分 -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    
+    
     <application
         android:name=".App"
         android:allowBackup="true"
@@ -99,6 +102,8 @@
         </receiver>
 
         <activity android:name=".m4appmanager.AppManagerActivity"></activity>
+        <activity android:name=".m5virusscan.VirusScanActivity"></activity>
+        <activity android:name=".m5virusscan.VirusScanSpeedActivity"></activity>
     </application>
 
 </manifest>
